options are reduced and moved to main.cpp

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,12 +1,14 @@
 noinst_HEADERS = \
+	actions.hpp \
 	common.hpp \
+	conf.hpp \
+	error.hpp \
+	lex.hpp \
 	location.hpp \
+	path.hpp \
 	std.hpp \
 	symbol.hpp \
 	timer.hpp \
-	actions.hpp \
-	error.hpp \
-	lex.hpp \
 	\
 	mm/ast.hpp \
 	mm/sys.hpp \
