--- a/config
+++ b/config
@@ -1,12 +1,13 @@
 #!/bin/bash 
  
- # The relative path to the directory, containing binary executables: 
+# The relative path to the directory, containing binary executables: 
 binpath='./build/release/bin'
-#binpath='./build/debug/bin'
+# binpath='./build/debug/bin'
  
- # The relative path to the directory, containing math sources:
- mathpath='./math'
+# The relative path to the directory, containing math sources:
+mathpath='./math'
+#mathpath='../../math'
 
-#memcheck='yes'
+memcheck='yes'
 
 source run_check
