--- a/scripts/config
+++ b/scripts/config
@@ -1,13 +1,13 @@
 #!/bin/bash 
  
 # The relative path to the directory, containing binary executables: 
-binpath='./build/release/bin'
-# binpath='./build/debug/bin'
+binpath='../build/release/bin'
+# binpath='../build/debug/bin'
  
 # The relative path to the directory, containing math sources:
-mathpath='./math'
-#mathpath='../../math'
+mathpath='../math'
+#mathpath='../../../math'
 
-memcheck='yes'
+#memcheck='yes'
 
 source run_check
