--- a/configure.ac
+++ b/configure.ac
@@ -12,8 +12,8 @@ AC_PROG_CXX
 AC_PROG_CC
 
 # Checks for libraries.
-AC_PROG_LIBTOOL
-AC_SUBST(LIBTOOL_DEPS)
+#AC_PROG_LIBTOOL
+#AC_SUBST(LIBTOOL_DEPS)
 
 # Checks for header files.
 #AC_CHECK_HEADERS([stddef.h stdint.h sys/time.h unistd.h])
@@ -26,7 +26,7 @@ AC_TYPE_SIZE_T
 AC_TYPE_UINT32_T
 AC_CHECK_TYPES([ptrdiff_t])
 
-LT_INIT
+#LT_INIT
 
 #m4_include([m4/ax_check_compile_flag.m4])
 AX_CHECK_COMPILE_FLAG([-std=gnu++1z], [CXXFLAGS="$CXXFLAGS -std=gnu++1z"])
@@ -62,11 +62,6 @@ AC_CONFIG_FILES([
 	include/Makefile
 	peglib/Makefile
 	src/Makefile
-	src/com/Makefile
-	src/mm/Makefile
-	src/smm/Makefile
-	src/rus/Makefile
-	src/daem/Makefile
 	metamath/Makefile
 ])
 
