'make dist' produces valid distribution file

--- a/Makefile.in
+++ b/Makefile.in
@@ -319,16 +319,24 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = \
+	AUTHORS \
 	bootstrap \
-	translate \
-	translate_deep
+	ChangeLog \
+	configure.ac \
+	COPYING \
+	INSTALL \
+	NEWS \
+	README \
+	README.md \
+	run
 
 SUBDIRS = \
 	scripts \
 	peglib \
 	include \
 	src \
-	metamath
+	metamath \
+	math
 
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
