--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT(russell-formal-math, 0.9.3, vlasov@academ.org)
+AC_INIT(russell-formal-math, 0.9.5, vlasov@academ.org)
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE
@@ -57,6 +57,7 @@ AC_CONFIG_FILES([
 	peglib/Makefile
 	src/Makefile
 	metamath/Makefile
+	math/Makefile
 ])
 
 AC_OUTPUT
