--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -315,8 +315,9 @@ AM_CPPFLAGS = \
 	$(BOOST_CPPFLAGS)
 
 AM_LDFLAGS = \
+	-all-static \
     $(BOOST_LDFLAGS) \
-    $(PTHREAD_CFLAGS)
+    $(PTHREAD_CFLAGS)	
 
 @SPLIT_COMPILE_FALSE@mdl_SOURCES = \
 @SPLIT_COMPILE_FALSE@	all.cpp \
@@ -358,6 +359,69 @@ AM_LDFLAGS = \
 @SPLIT_COMPILE_TRUE@	smm/verify.cpp \
 @SPLIT_COMPILE_TRUE@	\
 @SPLIT_COMPILE_TRUE@	main.cpp
+
+@SPLIT_COMPILE_FALSE@EXTRA_DIST = \
+@SPLIT_COMPILE_FALSE@	com/all.cpp \
+@SPLIT_COMPILE_FALSE@	daem/all.cpp \
+@SPLIT_COMPILE_FALSE@	mm/all.cpp \
+@SPLIT_COMPILE_FALSE@	rus/all.cpp \
+@SPLIT_COMPILE_FALSE@	smm/all.cpp \
+@SPLIT_COMPILE_FALSE@	\
+@SPLIT_COMPILE_FALSE@	com/timer.cpp \
+@SPLIT_COMPILE_FALSE@	com/memusage.cpp \
+@SPLIT_COMPILE_FALSE@	com/common.cpp \
+@SPLIT_COMPILE_FALSE@	\
+@SPLIT_COMPILE_FALSE@	daem/daemon.cpp \
+@SPLIT_COMPILE_FALSE@	\
+@SPLIT_COMPILE_FALSE@	mm/cut.cpp \
+@SPLIT_COMPILE_FALSE@	mm/ast.cpp \
+@SPLIT_COMPILE_FALSE@	mm/sys.cpp \
+@SPLIT_COMPILE_FALSE@	mm/merge.cpp \
+@SPLIT_COMPILE_FALSE@	mm/parser.cpp \
+@SPLIT_COMPILE_FALSE@	mm/show.cpp \
+@SPLIT_COMPILE_FALSE@	mm/translate.cpp \
+@SPLIT_COMPILE_FALSE@	\
+@SPLIT_COMPILE_FALSE@	rus/expr/parse.cpp \
+@SPLIT_COMPILE_FALSE@	rus/expr/unify.cpp \
+@SPLIT_COMPILE_FALSE@	rus/parser/parse.cpp \
+@SPLIT_COMPILE_FALSE@	rus/expr.cpp \
+@SPLIT_COMPILE_FALSE@	rus/sys.cpp \
+@SPLIT_COMPILE_FALSE@	rus/ast.cpp \
+@SPLIT_COMPILE_FALSE@	rus/memvol.cpp \
+@SPLIT_COMPILE_FALSE@	rus/show.cpp \
+@SPLIT_COMPILE_FALSE@	rus/translate.cpp \
+@SPLIT_COMPILE_FALSE@	rus/verify.cpp \
+@SPLIT_COMPILE_FALSE@	\
+@SPLIT_COMPILE_FALSE@	smm/ast.cpp \
+@SPLIT_COMPILE_FALSE@	smm/sys.cpp \
+@SPLIT_COMPILE_FALSE@	smm/parser.cpp \
+@SPLIT_COMPILE_FALSE@	smm/show.cpp \
+@SPLIT_COMPILE_FALSE@	smm/translate_mm.cpp \
+@SPLIT_COMPILE_FALSE@	smm/translate_rus.cpp \
+@SPLIT_COMPILE_FALSE@	smm/tree.cpp \
+@SPLIT_COMPILE_FALSE@	smm/verify.cpp \
+@SPLIT_COMPILE_FALSE@	\
+@SPLIT_COMPILE_FALSE@	mm/cut_adaptor.hpp \
+@SPLIT_COMPILE_FALSE@	rus/parser/adaptors.hpp \
+@SPLIT_COMPILE_FALSE@	rus/parser/grammar.hpp \
+@SPLIT_COMPILE_FALSE@	rus/parser/parse.hpp \
+@SPLIT_COMPILE_FALSE@	smm/math_symb.hpp \
+@SPLIT_COMPILE_FALSE@	smm/tree.hpp
+
+@SPLIT_COMPILE_TRUE@EXTRA_DIST = \
+@SPLIT_COMPILE_TRUE@	com/all.cpp \
+@SPLIT_COMPILE_TRUE@	daem/all.cpp \
+@SPLIT_COMPILE_TRUE@	mm/all.cpp \
+@SPLIT_COMPILE_TRUE@	rus/all.cpp \
+@SPLIT_COMPILE_TRUE@	smm/all.cpp \
+@SPLIT_COMPILE_TRUE@	all.cpp \
+@SPLIT_COMPILE_TRUE@	\
+@SPLIT_COMPILE_TRUE@	mm/cut_adaptor.hpp \
+@SPLIT_COMPILE_TRUE@	rus/parser/adaptors.hpp \
+@SPLIT_COMPILE_TRUE@	rus/parser/grammar.hpp \
+@SPLIT_COMPILE_TRUE@	rus/parser/parse.hpp \
+@SPLIT_COMPILE_TRUE@	smm/math_symb.hpp \
+@SPLIT_COMPILE_TRUE@	smm/tree.hpp
 
 mdl_LDADD = \
 	$(BOOST_FILESYSTEM_LIB) \
