mdl::Lex uses concurrent_hash_map - thread safe

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,6 +71,7 @@ target_link_libraries(mdl
 	${Boost_LOG}
 	${Boost_LOG_SETUP}
 	${CMAKE_THREAD_LIBS_INIT}
+	tbb
 )
 
 install(TARGETS mdl DESTINATION bin)
