mm2::verify is added

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,7 @@ else()
 		mm2/mm2_tree.cpp  
 		mm2/mm2_translate.cpp
 		mm2/mm2_inclusions.cpp
+		mm2/mm2_verify.cpp
 		
 		rus/expr/rus_expr_parse.cpp 
 		rus/expr/rus_expr_unify.cpp 
