import minimization is added

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,10 +43,12 @@ else()
 		rus/prover/rus_prover_show.cpp
 		rus/prover/rus_prover_space.cpp
 		rus/prover/rus_prover_tactics.cpp
-		rus/rus_expr.cpp 
+		
+		rus/rus_ast.cpp
+		rus/rus_expr.cpp
+		rus/rus_imports.cpp
+		rus/rus_memvol.cpp  
 		rus/rus_sys.cpp 
-		rus/rus_ast.cpp 
-		rus/rus_memvol.cpp
 		rus/rus_parser.cpp
 		rus/rus_read.cpp  
 		rus/rus_show.cpp 
