rus_prover_down2 is implemented

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,6 +42,7 @@ else()
 		rus/prover/rus_prover_cartesian.cpp
 		rus/prover/rus_prover_expr.cpp
 		rus/prover/rus_prover_down.cpp
+		rus/prover/rus_prover_down2.cpp
 		rus/prover/rus_prover_index.cpp
 		rus/prover/rus_prover_multy_index.cpp
 		rus/prover/rus_prover_node.cpp
