new matrix unification result intersection

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,6 +52,7 @@ else()
 		rus/prover/rus_prover_multy_subst.cpp
 		rus/prover/index/rus_prover_index.cpp
 		rus/prover/index/rus_prover_index_intersect.cpp
+		rus/prover/index/rus_prover_index_intersect2.cpp
 		rus/prover/index/rus_prover_index_matrix.cpp
 		rus/prover/index/rus_prover_index_unify.cpp
 		rus/prover/index/rus_prover_index_unify_iter.cpp
