index vector specialized unification algo is added

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,6 +51,7 @@ else()
 		rus/prover/rus_prover_multy_subst.cpp
 		rus/prover/unify/rus_prover_unify_index.cpp
 		rus/prover/unify/rus_prover_unify_index_term.cpp
+		rus/prover/unify/rus_prover_unify_indexes.cpp
 		rus/prover/unify/rus_prover_unify_vector.cpp
 		rus/prover/unify/rus_prover_unify_matrix.cpp
 		rus/prover/unify/rus_prover_unify_general.cpp
